# vgi-chem

./: CLAUDE.md  Dockerfile  Makefile  README.md  chem_worker.py  conftest.py  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  run-integration.sh
test/sql/: descriptors.test  lipinski.test  similarity.test
tests/: test_chem.py  test_scalars.py  test_tables.py
vgi_chem/: __init__.py  chem.py  meta.py  scalars.py  schema_utils.py  tables.py  worker.py
